// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Volume /> renders a book placeholder image when no thumbnail is passed 1`] = `
<li
  className="fb-volume collection-item avatar"
>
  <div
    className="circle valign-wrapper center-align teal lighten-2"
  >
    <i
      className="material-icons fb-thumbnail-icon"
    >
      library_books
    </i>
  </div>
  <span
    className="title truncate"
  >
    Fake title
  </span>
  <p
    className="fb-truncate"
  >
    Fake description
  </p>
  <a
    className="secondary-content"
    href="#!"
  >
    <i
      className="material-icons"
    >
      grade
    </i>
  </a>
</li>
`;

exports[`<Volume /> renders correctly 1`] = `
<li
  className="fb-volume collection-item avatar"
>
  <img
    className="circle"
    src="fake-thumbnail.png"
  />
  <span
    className="title truncate"
  >
    Fake title
  </span>
  <p
    className="fb-truncate"
  >
    Fake description
  </p>
  <a
    className="secondary-content"
    href="#!"
  >
    <i
      className="material-icons"
    >
      grade
    </i>
  </a>
</li>
`;
